# zombie-survivor

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
resources/shaders/: simple.frag  simple.vert  skybox.vert
src/: GUIManager.cpp  GUIManager.h  WindowManager.cpp  WindowManager.h  main.cpp
src/components/: Camera.h  Cubemap.h  Movement.h  Renderable.h  Survivor.h  Tile.h  Transform.h  Zombie.h
src/core/: ComponentArray.h  ComponentManager.h  EntityManager.h  Event.h  EventManager.h  Logger.h  Mediator.h  System.h  SystemManager.h  Types.h
src/game/: Config.cpp  Config.h
src/graphics/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  PrimitiveMeshes.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h
src/systems/: CameraControlSystem.cpp  CameraControlSystem.h  GameSystem.cpp  GameSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  SkyboxRenderSystem.cpp  SkyboxRenderSystem.h  SurvivorSystem.cpp  SurvivorSystem.h  ZombieSystem.cpp  ZombieSystem.h
